# kefctl

./: CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: aur-publish.yml  ci.yml
aur/: PKGBUILD
docs/: LEVELUP.md  architecture.md
docs/superpowers/specs/: 2026-03-19-kefctl-design.md
src/: app.rs  cli.rs  config.rs  discovery.rs  error.rs  event.rs  main.rs  tui.rs
src/kef_api/: eq.rs  events.rs  mod.rs  paths.rs  playback.rs  settings.rs  source.rs  types.rs  volume.rs
src/ui/: eq.rs  help.rs  mod.rs  network.rs  settings.rs  sidebar.rs  source.rs  status.rs  theme.rs
src/ui/snapshots/: kefctl__ui__tests__snapshot_eq_panel.snap  kefctl__ui__tests__snapshot_help_overlay.snap  kefctl__ui__tests__snapshot_network_panel.snap  kefctl__ui__tests__snapshot_settings_panel.snap  kefctl__ui__tests__snapshot_source_panel.snap  kefctl__ui__tests__snapshot_status_panel.snap
