[package]
name = "kefctl"
version = "0.1.0"
edition = "2024"
description = "TUI controller for KEF LSX II speakers"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.17"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
dirs = "6"
color-eyre = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
