[package]
name = "kefctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
description = "TUI controller for KEF LSX II speakers"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "query"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "signal",
    "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.17"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
insta = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
